# game_of_life

./: CMakeLists.txt  field.cpp  field.h  main.cpp  test.cpp
saves/: load.txt
